Revision history for Perl extension PGXN-Meta-Validator.

0.14.0
      - Added tests to protect against autovivication of keys.
      - Rewrote all error messages to be more consistent and informative.
      - Removed unused `header()` method.

0.13.0  2011-05-26T03:52:07
      - Fixed invalid Unicode character class.

0.12.0  2011-05-26T03:30:43
      - Added "conflicts" relationship to prereqs.
      - Documented `validate_pgxn_meta` options.

0.11.0  2011-05-25T06:01:14
      - Added `validate_pgxn_meta`.

0.10.0  2011-05-25T05:33:38
      - Initial public release on CPAN.