@@ -4,6 +4,9 @@ Revision history for Perl extension PGXN-Meta-Validator.
       - Added tests to protect against autovivication of keys.
       - Rewrote all error messages to be more consistent and informative.
       - Removed unused `header()` method.
+      - Added support for running under
+        [pgxn](http://pgxnclient.projects.postgresql.org/) as `pgxn
+        validate-meta META.json`.
 
 0.13.0  2011-05-26T03:52:07
       - Fixed invalid Unicode character class.
